# openai-api-basic-seungjoon

./: .env_template  .gitignore  README.md
01-openai-basic/: 01-text_completion.py  02-moderation.py  pyproject.toml
02-openai-practice-1/: 01-prompt.txt  01-sql-translate.py  02-prompt_engineering.py  03-recipe-generator.py  pyproject.toml
02-openai-practice-1/04-blog-writer/: blog-writer.py  blog.html
03-openai-practice-2/: 10-sentiment-analysis.py  11-auto-docstring.py  12-news-sample.json  12-translate-news.py  13-03-create-model.sh  13-fine-tuning-tiktoken.py  13-fine-tuning.py  14-01-text-embedding.py  14-02-document-similarity.py  15-chatgpt_api.py  pyproject.toml
03-openai-practice-2/common/: token_helper.py
