[tool.poetry]
name = "02-openai-practice-1"
version = "0.1.0"
description = ""
authors = ["Noah Kim <dongwoo_333@hanmail.net>"]
readme = "README.md"
packages = [{include = "02-openai-practice-1"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.4"
autopep8 = "^2.0.2"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
