[tool.poetry]
name = "03-openai-practice-2"
version = "0.1.0"
description = ""
authors = ["Noah Kim <dongwoo_333@hanmail.net>"]
readme = "README.md"
packages = [{include = "03-openai-practice-2"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.4"
autopep8 = "^2.0.2"
praw = "^7.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
